# final-project-level3-cv-02

./: .gitignore  README.md  requirements.txt
MusicXML2Audio/: constant.py  install_packages.sh  main.py  midi2audio.py  requirements.txt
app/: __init__.py  constant.py  main.py  pyproject.toml  service.py  utils.py
app/db/: connection.py  session.py
app/db/core/: config.py
app/db/crud/: image_bundle.py  sound.py  users.py
app/db/models/: image.py  image_bundle.py  sound.py  users.py
app/db/routes/: image.py  image_bundle.py  sound.py  users.py
app/db/schemas/: image.py  image_bundle.py  sound.py  users.py
app/db/service/: image_bundle.py  sound.py  users.py
app/static/css/: bootstrap.min.css  bootstrap.min.css.map  bootstrap.rtl.min.css.map  check.css  custom.css  error.css  hard-loading.css  index.css  loading.css  main.css  play.css  sign-form.css
app/static/js/: bootstrap.bundle.min.js  custom.js  index.js  sign-form.js  sign.js
app/templates/: error.html  hard-loading.html  index.html  loading.html  mail.html  main-1.html  main.html  play.html  play_.html  sign-check.html  sign-in.html  sign-up.html
metric/: README.md  metricXML.xml
model/: SFN_detection.py  beat_detection.py  blog_functions.py  constant.py  conversion.py  conversion_oneline.py  convert_table.py  converttoxml.ipynb  main.sh  measure_calculation.py  merge.py  noise_removal.py  note_class.py  pitch_detection_only_G.py  postprocess.py  postprocess.sh  preprocess.py  preprocess_refactored.py  staves.txt
oemer/: __init__.py  barline_extraction.py  build_label.py  build_system.py  (+14 more)
(+14 files in other folders)
